bbtest-nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bbtest-nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        run: bbtest-nginx
    spec:
      containers:
      - name: my-nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
