bbtest-nginx-server-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:  
  name: bbtest-service-clusterip 
spec:
  type: ClusterIP
  selector:    
    run: bbtest-nginx
  ports:  
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
