bbtest-nginx-service-nodePort.yaml
apiVersion: v1
kind: Service
metadata:  
  name: bbtest-nodeport-service
spec:
  type: NodePort
  ports:  
  - name: http
    port: 80
    #targetPort: 80
    #nodePort: 32720
    protocol: TCP
  selector:
    run: bbtest-nginx
