bbtest-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: bbtest-loadbalancer-service-ingress
spec:
  rules:
    - host: bbtestnginxdemo.dev.fwci.aws.fwmrm.net
      http:
        paths:
          - backend:
              serviceName: bbtest-loadbalancer-service
              servicePort: 80
            path: /
